--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
 .App {
-  text-align: center;
+    box-sizing: border-box;
+    height: 100vh;
+    background-color: #1F1D2A;
+    background-image: url('./images/bg-stars.svg');
+    color: white;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.pattern-hills {
+    background-image: url('./images/pattern-hills.svg');
+    background-repeat: no-repeat;
+    background-position-y: 100%;
+    height: inherit;
+    background-size: contain;
+    padding-top: 6rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.row>div>div {
+    background-color: #34364F;
+    font-size: 4rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media only screen and (max: 768px) {
+    .row>div>div {
+        font-size: 3rem;
+    }
 }
